--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -656,4 +656,14 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
   urldate  = {2022-09-22},
 }
 
+@Online{SVM_Python_2019,
+  author   = {Daud Lell},
+  date     = {2019-04-10},
+  title    = {Einführung in Machine Learning mit Python – Support Vector Machines},
+  url      = {https://www.ancud.de/support-vector-machine-svn/},
+  language = {English},
+  urldate  = {2022-09-22},
+  keywords = {URL},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
