--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -7041,7 +7041,20 @@
    "metadata": {},
    "source": [
     "### Kernel trick\n",
-    "\n"
+    "\n",
+    "https://towardsdatascience.com/the-kernel-trick-c98cdbcaeb3f\n",
+    "\n",
+    "Wir haben gesehen, wie höherdimensionale Transformationen es uns ermöglichen, Daten zu trennen, um Klassifikationsvorhersagen zu treffen. Um einen Support-Vektor-Klassifikator zu trainieren und unsere Zielfunktion zu optimieren, müssten wir Operationen mit den höherdimensionalen Vektoren im transformierten Merkmalsraum durchführen. In realen Anwendungen kann es viele Merkmale in den Daten geben und die Anwendung von Transformationen, die viele Polynomkombinationen dieser Merkmale beinhalten, führt zu extrem hohen und unpraktischen Rechenkosten.\n",
+    "\n",
+    "Der Kernel-Trick bietet eine Lösung für dieses Problem. Der \"Trick\" besteht darin, dass Kernel-Methoden die Daten nur durch eine Reihe paarweiser Ähnlichkeitsvergleiche zwischen den ursprünglichen Datenbeobachtungen x (mit den ursprünglichen Koordinaten im niedrigdimensionalen Raum) darstellen, anstatt explizit die Transformationen ϕ(x) anzuwenden und die Daten durch diese transformierten Koordinaten im höherdimensionalen Merkmalsraum darzustellen.\n",
+    "\n",
+    "\n",
+    "Folgende **Kernel-Typen** stellt das Paket `scikit-learn` zur Verfügung:\n",
+    "\n",
+    "- linear\n",
+    "- rbf\n",
+    "- polynomial\n",
+    "- sigmoid"
    ]
   },
   {
