--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -666,4 +666,24 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
   keywords = {URL},
 }
 
+@Online{Kernel_trick_2018,
+  author   = {Drew Wilimitis},
+  date     = {2018-12-12},
+  title    = {The Kernel Trick in Support Vector Classification},
+  url      = {https://towardsdatascience.com/the-kernel-trick-c98cdbcaeb3f},
+  language = {English},
+  urldate  = {2022-09-23},
+  keywords = {URL},
+}
+
+@Online{Kernel_trick_2018_2,
+  author   = {Grace Zhang},
+  date     = {2018-11-11},
+  title    = {What is the kernel trick? Why is it important?},
+  url      = {https://medium.com/@zxr.nju/what-is-the-kernel-trick-why-is-it-important-98a98db0961d},
+  language = {English},
+  urldate  = {2022-09-23},
+  keywords = {URL},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
